docs/website/src/main/resources/certifications/jakarta-servlet/4.0/TCK-Results.md
TCK Results
===========

As required by the
[Eclipse Foundation Technology Compatibility Kit License](https://www.eclipse.org/legal/tck.php),
following is a summary of the TCK results for releases of Jakarta Servlet.

# Eclipse GlassFish 5.1, Full Profile, Certification Summary

- Product Name, Version and download URL (if applicable): <br/>
  [Eclipse GlassFish 5.1](https://www.eclipse.org/downloads/download.php?file=/glassfish/glassfish-5.1.0.zip)
  Includes Servlet 4.0.2
- Specification Name, Version and download URL: <br/>
  [Jakarta Servlet 4.0](https://jakarta.ee/specifications/servlet/4.0/)
- TCK Version, digital SHA-256 fingerprint and download URL: <br/>
  [Jakarta Servlet TCK, 4.0](https://download.eclipse.org/jakartaee/servlet/4.0/eclipse-servlet-tck-4.0.0.zip), SHA-256: `b81fb95440b4b1a2c8cda3874449b364d807db2362af381afe5fd8ade503e797`
- Public URL of TCK Results Summary: <br/>
  [TCK results summary](TCK-Results.html)
- Any Additional Specification Certification Requirements: <br/>
  None
- Java runtime used to run the implementation: <br/>
  Oracle JDK 1.8.0_191
- Summary of the information for the certification environment, operating system, cloud, ...: <br/>
  Linux Centos 7

Test results:

```
[javatest.batch] ********************************************************************************
[javatest.batch] Completed running 1689 tests.
[javatest.batch] Number of Tests Passed      = 1689
[javatest.batch] Number of Tests Failed      = 0
[javatest.batch] Number of Tests with Errors = 0
[javatest.batch] ********************************************************************************
```
