docs/website/src/main/resources/certifications/jakarta-servlet/5.0/TCK-Results.md
TCK Results
===========

As required by the
[Eclipse Foundation Technology Compatibility Kit License](https://www.eclipse.org/legal/tck.php),
following is a summary of the TCK results for releases of Jakarta Servlet.

# Eclipse GlassFish 6.0, Full Profile, Certification Summary

- Product Name, Version and download URL (if applicable): <br/>
  [Eclipse Glassfish 6.0.0-SNAPSHOT-2020-09-06](https://download.eclipse.org/ee4j/glassfish/weekly/glassfish-6.0.0-SNAPSHOT-2020-09-06.zip)
- Specification Name, Version and download URL: <br/>
  [Jakarta Servlet 5.0](https://jakarta.ee/specifications/servlet/5.0/)
- TCK Version, digital SHA-256 fingerprint and download URL: <br/>
  [Jakarta Servlet TCK, 5.0](https://download.eclipse.org/jakartaee/servlet/5.0/eclipse-servlet-tck-5.0.0.zip), SHA-256: `02eff661cc7074fc6cc0a9ba05b57642557383e22da2c2b3551cb1740cd7ae20`
- Public URL of TCK Results Summary: <br/>
  [TCK results summary](TCK-Results.html)
- Any Additional Specification Certification Requirements: <br/>
  None
- Java runtime used to run the implementation: <br/>
  Oracle JDK 1.8.0_202
- Summary of the information for the certification environment, operating system, cloud, ...: <br/>
  Alpine Linux v3.12

Test results:

```
[javatest.batch] ********************************************************************************
[javatest.batch] Completed running 1690 tests.
[javatest.batch] Number of Tests Passed      = 1690
[javatest.batch] Number of Tests Failed      = 0
[javatest.batch] Number of Tests with Errors = 0
[javatest.batch] ********************************************************************************

BUILD SUCCESSFUL
Total time: 54 minutes 6 seconds
SHA256_GF=26d68ba51c8868f629931f0015984adec61bf013fd1e7c544c446ece6097f1c1
SHA256_API=33d3a5bda82c7d2f1b898685faa954f1fc34f7b0ae5c2f6ccc6d051e8a10973b
SHA256_TCK=02eff661cc7074fc6cc0a9ba05b57642557383e22da2c2b3551cb1740cd7ae20
Product_download=https://download.eclipse.org/ee4j/glassfish/weekly/glassfish-6.0.0-SNAPSHOT-2020-09-06.zip
API_download=https://jakarta.oss.sonatype.org/content/repositories/staging/jakarta/servlet/jakarta.servlet-api/5.0.0/jakarta.servlet-api-5.0.0.jar
TCK_download=https://download.eclipse.org/ee4j/jakartaee-tck/jakartaee9-eftl/staged-900/jakarta-servlet-tck-5.0.0.zip
OS4=3.12.0 NAME="Alpine Linux" ID=alpine VERSION_ID=3.12.0 PRETTY_NAME="Alpine Linux v3.12" HOME_URL="https://alpinelinux.org/" BUG_REPORT_URL="https://bugs.alpinelinux.org/"
JDK_VERSION=Picked up JAVA_TOOL_OPTIONS: -XX:+IgnoreUnrecognizedVMOptions -XX:+UnlockExperimentalVMOptions java version "1.8.0_202" Java(TM) SE Runtime Environment (build 1.8.0_202-b08) Java HotSpot(TM) 64-Bit Server VM (build 25.202-b08, mixed mode)
```